# digital_inclusion_api

./: .gitignore  README.md  app.py  logging_config.json  pyproject.toml
api/: access.py
digital_inclusion_api/: access.py  app_logger.py  connection.py
tests/: test_integration.py
